@@ -5,6 +5,7 @@ New features:
 
 * Fix GitHub Issue #173: Being able to paste and create a node right-away
   - Pasting text to Heimer will create a new node with that text
+  - Pasting image data e.g. from Gimp to Heimer will create a new node with that image
 
 Bug fixes:
 
